--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-scripts": "4.0.3",
     "react-validation": "^3.0.7",
     "web-vitals": "^1.1.2",
-    "write-json-file": "^4.3.0"
+    "write-json-file": "^4.3.0",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
