--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-validation": "^3.0.7",
     "web-vitals": "^1.1.2",
     "write-json-file": "^4.3.0",
+    "yarn": "^1.22.10",
     "yup": "^0.32.9"
   },
   "scripts": {
