--- a/package.json
+++ b/package.json
@@ -12,10 +12,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
-    "react-scripts": "4.0.3",
-    "redux": "^4.1.0",
-    "redux-thunk": "^2.3.0",
-    "web-vitals": "^1.0.1",
+    "react-scripts": "^4.0.3",
     "yup": "^0.32.9"
   },
   "scripts": {
@@ -43,10 +40,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
-    "@types/react-redux": "^7.1.16",
-    "@types/redux": "^3.6.0",
     "typescript": "^4.3.4"
   }
 }
